service.yaml
apiVersion: v1
kind: Service
metadata:
  name: edge-client
  namespace: YOUR_NAMESPACE
spec:
  selector:
    app: edge-client
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
